force-app/main/default/objects/ProductionOrder__c/ProductionOrder__c.object-meta.xml
<CustomObject>
    <label>Production Order</label>
    <nameField>
        <displayFormat>PO{00000000}</displayFormat>
        <label>Production Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>