force-app/main/default/objects/ProductionOrder__c/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <label>Depth</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>