force-app/main/default/objects/ProductionOrder__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Production Orders</relationshipLabel>
    <relationshipName>ProductionOrders</relationshipName>
    <type>Lookup</type>
</CustomField>