force-app/main/default/objects/ProductionOrder__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Production Orders</relationshipLabel>
    <relationshipName>ProductionOrders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>