force-app/main/default/objects/ProductionOrder__c/fields/PackingSlip__c.field-meta.xml
<CustomField>
    <fullName>PackingSlip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packing Slip</label>
    <referenceTo>PackingSlip__c</referenceTo>
    <relationshipLabel>Production Orders</relationshipLabel>
    <relationshipName>ProductionOrders</relationshipName>
    <type>Lookup</type>
</CustomField>