force-app/main/default/objects/ProductionOrder__c/fields/SOP__c.field-meta.xml
<CustomField>
    <fullName>SOP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOP</label>
    <referenceTo>SOP__c</referenceTo>
    <relationshipLabel>Production Orders</relationshipLabel>
    <relationshipName>ProductionOrders</relationshipName>
    <type>Lookup</type>
</CustomField>