force-app/main/default/objects/ProductionOrder__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>